# my_parser

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  read_fasta.rs  read_result_csv.rs
test/: test.fasta
